fix: text overflow

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ code {
 p {
   color: #ffffff;
   margin: 0;
+  overflow-wrap: anywhere;
 }
 
 a {
